Add base html with dummy content in index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,208 @@
     <title>Admin Dashboard</title>
 </head>
 <body>
-    
+    <div class="header">
+        <div class="header-first">
+            <div class="searchbar-container">
+                <img src="https://www.theodinproject.com/assets/icons/odin-icon-22b41941.svg" alt="norse god odin's face">
+                <input type="search" name="searchbar">
+            </div>
+            <div class="notifications-container">
+                <img src="https://www.theodinproject.com/assets/icons/odin-icon-22b41941.svg" alt="norse god odin's face">
+                <img src="https://www.theodinproject.com/assets/icons/odin-icon-22b41941.svg" alt="norse god odin's face">
+                <h6>Morgan Oakley</h6>
+            </div>
+        </div>
+
+        <div class="header-second">
+            <div class="greeting-container">
+                <img src="https://www.theodinproject.com/assets/icons/odin-icon-22b41941.svg" alt="norse god odin's face">
+                <div class="header-greeting">
+                    <p>Hi there,</p>
+                    <h4>Morgan Oakley (@morgan)</h4>
+                </div>
+            </div>
+
+            <div class="upload-share-container">
+                <ul>
+                    <li><button type="button">New</button></li>
+                    <li><button type="button">Upload</button></li>
+                    <li><button type="button">Share</button></li>
+                </ul>
+            </div>
+        </div>
+
+    </div>
+
+    <div class="sidebar">
+        <div>
+            <img src="https://www.theodinproject.com/assets/icons/odin-icon-22b41941.svg" alt="norse god odin's face">
+            <h4>Dashboard</h4>  
+        </div>
+        <div>
+            <img src="https://www.theodinproject.com/assets/icons/odin-icon-22b41941.svg" alt="norse god odin's face">
+            <p>Home</p>
+            <img src="https://www.theodinproject.com/assets/icons/odin-icon-22b41941.svg" alt="norse god odin's face">
+            <p>Profile</p>
+            <img src="https://www.theodinproject.com/assets/icons/odin-icon-22b41941.svg" alt="norse god odin's face">
+            <p>Messages</p>
+            <img src="https://www.theodinproject.com/assets/icons/odin-icon-22b41941.svg" alt="norse god odin's face">
+            <p>History</p>
+            <img src="https://www.theodinproject.com/assets/icons/odin-icon-22b41941.svg" alt="norse god odin's face">
+            <p>Tasks</p>
+            <img src="https://www.theodinproject.com/assets/icons/odin-icon-22b41941.svg" alt="norse god odin's face">
+            <p>Communities</p>
+        </div>
+        <div>
+            <img src="https://www.theodinproject.com/assets/icons/odin-icon-22b41941.svg" alt="norse god odin's face">
+            <p>Settings</p>
+            <img src="https://www.theodinproject.com/assets/icons/odin-icon-22b41941.svg" alt="norse god odin's face">
+            <p>Support</p>
+            <img src="https://www.theodinproject.com/assets/icons/odin-icon-22b41941.svg" alt="norse god odin's face">
+            <p>Privacy</p>
+        </div>
+    </div>
+
+    <div class="main">
+        <div>
+            <h5>Your Projects</h5>
+            <div>
+                <div class="yellow-stripe-container"></div>
+                <div>
+                    <div>
+                        <h6>Super Cool Project</h6>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos itaque atque laboriosam recusandae hic culpa ea sequi maiores beatae quasi.</p>
+                    </div>
+                    <ul>
+                        <li><img src="https://www.theodinproject.com/assets/icons/odin-icon-22b41941.svg" alt="norse god odin's face"></li>
+                        <li><img src="https://www.theodinproject.com/assets/icons/odin-icon-22b41941.svg" alt="norse god odin's face"></li>
+                        <li><img src="https://www.theodinproject.com/assets/icons/odin-icon-22b41941.svg" alt="norse god odin's face"></li>
+                    </ul>
+                </div>
+            </div>
+            <div>
+                <div class="yellow-stripe-container"></div>
+                <div>
+                    <div>
+                        <h6>Super Cool Project</h6>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos itaque atque laboriosam recusandae hic culpa ea sequi maiores beatae quasi.</p>
+                    </div>
+                    <ul>
+                        <li><img src="https://www.theodinproject.com/assets/icons/odin-icon-22b41941.svg" alt="norse god odin's face"></li>
+                        <li><img src="https://www.theodinproject.com/assets/icons/odin-icon-22b41941.svg" alt="norse god odin's face"></li>
+                        <li><img src="https://www.theodinproject.com/assets/icons/odin-icon-22b41941.svg" alt="norse god odin's face"></li>
+                    </ul>
+                </div>
+            </div>
+            <div>
+                <div class="yellow-stripe-container"></div>
+                <div>
+                    <div>
+                        <h6>Super Cool Project</h6>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos itaque atque laboriosam recusandae hic culpa ea sequi maiores beatae quasi.</p>
+                    </div>
+                    <ul>
+                        <li><img src="https://www.theodinproject.com/assets/icons/odin-icon-22b41941.svg" alt="norse god odin's face"></li>
+                        <li><img src="https://www.theodinproject.com/assets/icons/odin-icon-22b41941.svg" alt="norse god odin's face"></li>
+                        <li><img src="https://www.theodinproject.com/assets/icons/odin-icon-22b41941.svg" alt="norse god odin's face"></li>
+                    </ul>
+                </div>
+            </div>
+            <div>
+                <div class="yellow-stripe-container"></div>
+                <div>
+                    <div>
+                        <h6>Super Cool Project</h6>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos itaque atque laboriosam recusandae hic culpa ea sequi maiores beatae quasi.</p>
+                    </div>
+                    <ul>
+                        <li><img src="https://www.theodinproject.com/assets/icons/odin-icon-22b41941.svg" alt="norse god odin's face"></li>
+                        <li><img src="https://www.theodinproject.com/assets/icons/odin-icon-22b41941.svg" alt="norse god odin's face"></li>
+                        <li><img src="https://www.theodinproject.com/assets/icons/odin-icon-22b41941.svg" alt="norse god odin's face"></li>
+                    </ul>
+                </div>
+            </div>
+            <div>
+                <div class="yellow-stripe-container"></div>
+                <div>
+                    <div>
+                        <h6>Super Cool Project</h6>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos itaque atque laboriosam recusandae hic culpa ea sequi maiores beatae quasi.</p>
+                    </div>
+                    <ul>
+                        <li><img src="https://www.theodinproject.com/assets/icons/odin-icon-22b41941.svg" alt="norse god odin's face"></li>
+                        <li><img src="https://www.theodinproject.com/assets/icons/odin-icon-22b41941.svg" alt="norse god odin's face"></li>
+                        <li><img src="https://www.theodinproject.com/assets/icons/odin-icon-22b41941.svg" alt="norse god odin's face"></li>
+                    </ul>
+                </div>
+            </div>
+            <div>
+                <div class="yellow-stripe-container"></div>
+                <div>
+                    <div>
+                        <h6>Super Cool Project</h6>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos itaque atque laboriosam recusandae hic culpa ea sequi maiores beatae quasi.</p>
+                    </div>
+                    <ul>
+                        <li><img src="https://www.theodinproject.com/assets/icons/odin-icon-22b41941.svg" alt="norse god odin's face"></li>
+                        <li><img src="https://www.theodinproject.com/assets/icons/odin-icon-22b41941.svg" alt="norse god odin's face"></li>
+                        <li><img src="https://www.theodinproject.com/assets/icons/odin-icon-22b41941.svg" alt="norse god odin's face"></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <div>
+            <h5>Announcements</h5>
+            <div>
+                <div>
+                    <h6>Site Maintenance</h6>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam laudantium debitis impedit veniam.</p>
+                </div>
+                <div>
+                    <h6>Community Share Day</h6>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam laudantium debitis impedit veniam.</p>
+                </div>
+                <div>
+                    <h6>Updated Privacy Policy</h6>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam laudantium debitis impedit veniam.</p>
+                </div>
+            </div>
+        </div>
+        
+        <div>
+            <h5>Trending</h5>
+            <div>
+                <div>
+                    <img src="https://www.theodinproject.com/assets/icons/odin-icon-22b41941.svg" alt="norse god odin's face">
+                    <div>
+                        <p>@tegan</p>
+                        <p>World Peace Builder</p>
+                    </div>
+                </div>
+                <div>
+                    <img src="https://www.theodinproject.com/assets/icons/odin-icon-22b41941.svg" alt="norse god odin's face">
+                    <div>
+                        <p>@morgan</p>
+                        <p>Super Cool Project</p>
+                    </div>
+                </div>
+                <div>
+                    <img src="https://www.theodinproject.com/assets/icons/odin-icon-22b41941.svg" alt="norse god odin's face">
+                    <div>
+                        <p>@kendall</p>
+                        <p>Life Changing App</p>
+                    </div>
+                </div>
+                <div>
+                    <img src="https://www.theodinproject.com/assets/icons/odin-icon-22b41941.svg" alt="norse god odin's face">
+                    <div>
+                        <p>@alex</p>
+                        <p>No Traffic Maker</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
