Add base layout for header and sidebar sections

--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
     </div>
 
     <div class="sidebar">
-        <div>
+        <div class="dashboard-container">
             <img src="https://www.theodinproject.com/assets/icons/odin-icon-22b41941.svg" alt="norse god odin's face">
             <h4>Dashboard</h4>  
         </div>
-        <div>
+        <div class="param-container">
             <img src="https://www.theodinproject.com/assets/icons/odin-icon-22b41941.svg" alt="norse god odin's face">
             <p>Home</p>
             <img src="https://www.theodinproject.com/assets/icons/odin-icon-22b41941.svg" alt="norse god odin's face">
@@ -59,7 +59,7 @@
             <img src="https://www.theodinproject.com/assets/icons/odin-icon-22b41941.svg" alt="norse god odin's face">
             <p>Communities</p>
         </div>
-        <div>
+        <div class="param-container">
             <img src="https://www.theodinproject.com/assets/icons/odin-icon-22b41941.svg" alt="norse god odin's face">
             <p>Settings</p>
             <img src="https://www.theodinproject.com/assets/icons/odin-icon-22b41941.svg" alt="norse god odin's face">
