Add basic main section structure

--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@
     </div>
 
     <div class="main">
-        <div>
+        <div class="projects">
             <h5>Your Projects</h5>
-            <div>
+            <div class="project-container">
                 <div class="yellow-stripe-container"></div>
-                <div>
-                    <div>
+                <div class="project">
+                    <div class="project-content">
                         <h6>Super Cool Project</h6>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos itaque atque laboriosam recusandae hic culpa ea sequi maiores beatae quasi.</p>
                     </div>
@@ -86,11 +86,11 @@
                     </ul>
                 </div>
             </div>
-            <div>
+            <div class="project-container">
                 <div class="yellow-stripe-container"></div>
-                <div>
-                    <div>
-                        <h6>Super Cool Project</h6>
+                <div class="project">
+                    <div class="project-content">
+                        <h6>Less Cool Project</h6>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos itaque atque laboriosam recusandae hic culpa ea sequi maiores beatae quasi.</p>
                     </div>
                     <ul>
@@ -100,11 +100,11 @@
                     </ul>
                 </div>
             </div>
-            <div>
+            <div class="project-container">
                 <div class="yellow-stripe-container"></div>
-                <div>
-                    <div>
-                        <h6>Super Cool Project</h6>
+                <div class="project">
+                    <div class="project-content">
+                        <h6>Impossible App</h6>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos itaque atque laboriosam recusandae hic culpa ea sequi maiores beatae quasi.</p>
                     </div>
                     <ul>
@@ -114,11 +114,11 @@
                     </ul>
                 </div>
             </div>
-            <div>
+            <div class="project-container">
                 <div class="yellow-stripe-container"></div>
-                <div>
-                    <div>
-                        <h6>Super Cool Project</h6>
+                <div class="project">
+                    <div class="project-content">
+                        <h6>Easy Peasy App</h6>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos itaque atque laboriosam recusandae hic culpa ea sequi maiores beatae quasi.</p>
                     </div>
                     <ul>
@@ -128,11 +128,11 @@
                     </ul>
                 </div>
             </div>
-            <div>
+            <div class="project-container">
                 <div class="yellow-stripe-container"></div>
-                <div>
-                    <div>
-                        <h6>Super Cool Project</h6>
+                <div class="project">
+                    <div class="project-content">
+                        <h6>Ad Blocker</h6>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos itaque atque laboriosam recusandae hic culpa ea sequi maiores beatae quasi.</p>
                     </div>
                     <ul>
@@ -142,11 +142,11 @@
                     </ul>
                 </div>
             </div>
-            <div>
+            <div class="project-container">
                 <div class="yellow-stripe-container"></div>
-                <div>
-                    <div>
-                        <h6>Super Cool Project</h6>
+                <div class="project">
+                    <div class="project-content">
+                        <h6>Money Maker</h6>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos itaque atque laboriosam recusandae hic culpa ea sequi maiores beatae quasi.</p>
                     </div>
                     <ul>
@@ -158,51 +158,51 @@
             </div>
         </div>
 
-        <div>
+        <div class="announcements">
             <h5>Announcements</h5>
-            <div>
-                <div>
+            <div class="announcements-container">
+                <div class="announcement">
                     <h6>Site Maintenance</h6>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam laudantium debitis impedit veniam.</p>
                 </div>
-                <div>
+                <div class="announcement">
                     <h6>Community Share Day</h6>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam laudantium debitis impedit veniam.</p>
                 </div>
-                <div>
+                <div class="announcement">
                     <h6>Updated Privacy Policy</h6>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam laudantium debitis impedit veniam.</p>
                 </div>
             </div>
         </div>
         
-        <div>
+        <div class="trends">
             <h5>Trending</h5>
-            <div>
-                <div>
+            <div class="trends-container">
+                <div class="trend">
                     <img src="https://www.theodinproject.com/assets/icons/odin-icon-22b41941.svg" alt="norse god odin's face">
-                    <div>
+                    <div class="trend-content">
                         <p>@tegan</p>
                         <p>World Peace Builder</p>
                     </div>
                 </div>
-                <div>
+                <div class="trend">
                     <img src="https://www.theodinproject.com/assets/icons/odin-icon-22b41941.svg" alt="norse god odin's face">
-                    <div>
+                    <div class="trend-content">
                         <p>@morgan</p>
                         <p>Super Cool Project</p>
                     </div>
                 </div>
-                <div>
+                <div class="trend">
                     <img src="https://www.theodinproject.com/assets/icons/odin-icon-22b41941.svg" alt="norse god odin's face">
-                    <div>
+                    <div class="trend-content">
                         <p>@kendall</p>
                         <p>Life Changing App</p>
                     </div>
                 </div>
-                <div>
+                <div class="trend">
                     <img src="https://www.theodinproject.com/assets/icons/odin-icon-22b41941.svg" alt="norse god odin's face">
-                    <div>
+                    <div class="trend-content">
                         <p>@alex</p>
                         <p>No Traffic Maker</p>
                     </div>
