--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
     <div class="header">
         <div class="header-first">
             <div class="searchbar-container">
-                <img src="https://www.theodinproject.com/assets/icons/odin-icon-22b41941.svg" alt="norse god odin's face">
+                <img src="img/search-svgrepo-com.svg" alt="icon" width="50px">
                 <input type="search" name="searchbar">
             </div>
             <div class="notifications-container">
-                <img src="https://www.theodinproject.com/assets/icons/odin-icon-22b41941.svg" alt="norse god odin's face">
-                <img src="https://www.theodinproject.com/assets/icons/odin-icon-22b41941.svg" alt="norse god odin's face">
+                <img src="img/bell-ringing-svgrepo-com.svg" alt="icon" width="50px">
+                <img src="img/animal-cat-cats-svgrepo-com.svg" alt="icon" width="50px">
                 <h6>Morgan Oakley</h6>
             </div>
         </div>
 
         <div class="header-second">
             <div class="greeting-container">
-                <img src="https://www.theodinproject.com/assets/icons/odin-icon-22b41941.svg" alt="norse god odin's face">
+                <img src="img/animal-cat-cats-svgrepo-com.svg" alt="icon" width="50px">
                 <div class="header-greeting">
                     <p>Hi there,</p>
                     <h4>Morgan Oakley (@morgan)</h4>
@@ -42,29 +42,29 @@
 
     <div class="sidebar">
         <div class="dashboard-container">
-            <img src="https://www.theodinproject.com/assets/icons/odin-icon-22b41941.svg" alt="norse god odin's face">
+            <img src="img/dashboard-svgrepo-com.svg" alt="icon" width="50px">
             <h4>Dashboard</h4>  
         </div>
         <div class="param-container">
-            <img src="https://www.theodinproject.com/assets/icons/odin-icon-22b41941.svg" alt="norse god odin's face">
+            <img src="img/home-svgrepo-com.svg" alt="icon" width="50px">
             <p>Home</p>
-            <img src="https://www.theodinproject.com/assets/icons/odin-icon-22b41941.svg" alt="norse god odin's face">
+            <img src="img/id-card-svgrepo-com.svg" alt="icon" width="50px">
             <p>Profile</p>
-            <img src="https://www.theodinproject.com/assets/icons/odin-icon-22b41941.svg" alt="norse god odin's face">
+            <img src="img/message-bubble-2-svgrepo-com.svg" alt="icon" width="50px">
             <p>Messages</p>
-            <img src="https://www.theodinproject.com/assets/icons/odin-icon-22b41941.svg" alt="norse god odin's face">
+            <img src="img/clock-svgrepo-com.svg" alt="icon" width="50px">
             <p>History</p>
-            <img src="https://www.theodinproject.com/assets/icons/odin-icon-22b41941.svg" alt="norse god odin's face">
+            <img src="img/documents-sharp-svgrepo-com (1).svg" alt="icon" width="50px">
             <p>Tasks</p>
-            <img src="https://www.theodinproject.com/assets/icons/odin-icon-22b41941.svg" alt="norse god odin's face">
+            <img src="img/people-svgrepo-com (2).svg" alt="icon" width="50px">
             <p>Communities</p>
         </div>
         <div class="param-container">
-            <img src="https://www.theodinproject.com/assets/icons/odin-icon-22b41941.svg" alt="norse god odin's face">
+            <img src="img/settings-2-svgrepo-com (2).svg" alt="icon" width="50px">
             <p>Settings</p>
-            <img src="https://www.theodinproject.com/assets/icons/odin-icon-22b41941.svg" alt="norse god odin's face">
+            <img src="img/question-filled-svgrepo-com.svg" alt="icon" width="50px">
             <p>Support</p>
-            <img src="https://www.theodinproject.com/assets/icons/odin-icon-22b41941.svg" alt="norse god odin's face">
+            <img src="img/shield-check-svgrepo-com.svg" alt="icon" width="50px">
             <p>Privacy</p>
         </div>
     </div>
@@ -80,9 +80,9 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos itaque atque laboriosam recusandae hic culpa ea sequi maiores beatae quasi.</p>
                     </div>
                     <ul>
-                        <li><img src="https://www.theodinproject.com/assets/icons/odin-icon-22b41941.svg" alt="norse god odin's face"></li>
-                        <li><img src="https://www.theodinproject.com/assets/icons/odin-icon-22b41941.svg" alt="norse god odin's face"></li>
-                        <li><img src="https://www.theodinproject.com/assets/icons/odin-icon-22b41941.svg" alt="norse god odin's face"></li>
+                        <li><img src="img/star-svgrepo-com.svg" alt="icon" width="50px"></li>
+                        <li><img src="img/eye-plus-svgrepo-com.svg" alt="icon" width="50px"></li>
+                        <li><img src="img/git-branch-svgrepo-com.svg" alt="icon" width="50px"></li>
                     </ul>
                 </div>
             </div>
@@ -94,9 +94,9 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos itaque atque laboriosam recusandae hic culpa ea sequi maiores beatae quasi.</p>
                     </div>
                     <ul>
-                        <li><img src="https://www.theodinproject.com/assets/icons/odin-icon-22b41941.svg" alt="norse god odin's face"></li>
-                        <li><img src="https://www.theodinproject.com/assets/icons/odin-icon-22b41941.svg" alt="norse god odin's face"></li>
-                        <li><img src="https://www.theodinproject.com/assets/icons/odin-icon-22b41941.svg" alt="norse god odin's face"></li>
+                        <li><img src="img/star-svgrepo-com.svg" alt="icon" width="50px"></li>
+                        <li><img src="img/eye-plus-svgrepo-com.svg" alt="icon" width="50px"></li>
+                        <li><img src="img/git-branch-svgrepo-com.svg" alt="icon" width="50px"></li>
                     </ul>
                 </div>
             </div>
@@ -108,9 +108,9 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos itaque atque laboriosam recusandae hic culpa ea sequi maiores beatae quasi.</p>
                     </div>
                     <ul>
-                        <li><img src="https://www.theodinproject.com/assets/icons/odin-icon-22b41941.svg" alt="norse god odin's face"></li>
-                        <li><img src="https://www.theodinproject.com/assets/icons/odin-icon-22b41941.svg" alt="norse god odin's face"></li>
-                        <li><img src="https://www.theodinproject.com/assets/icons/odin-icon-22b41941.svg" alt="norse god odin's face"></li>
+                        <li><img src="img/star-svgrepo-com.svg" alt="icon" width="50px"></li>
+                        <li><img src="img/eye-plus-svgrepo-com.svg" alt="icon" width="50px"></li>
+                        <li><img src="img/git-branch-svgrepo-com.svg" alt="icon" width="50px"></li>
                     </ul>
                 </div>
             </div>
@@ -122,9 +122,9 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos itaque atque laboriosam recusandae hic culpa ea sequi maiores beatae quasi.</p>
                     </div>
                     <ul>
-                        <li><img src="https://www.theodinproject.com/assets/icons/odin-icon-22b41941.svg" alt="norse god odin's face"></li>
-                        <li><img src="https://www.theodinproject.com/assets/icons/odin-icon-22b41941.svg" alt="norse god odin's face"></li>
-                        <li><img src="https://www.theodinproject.com/assets/icons/odin-icon-22b41941.svg" alt="norse god odin's face"></li>
+                        <li><img src="img/star-svgrepo-com.svg" alt="icon" width="50px"></li>
+                        <li><img src="img/eye-plus-svgrepo-com.svg" alt="icon" width="50px"></li>
+                        <li><img src="img/git-branch-svgrepo-com.svg" alt="icon" width="50px"></li>
                     </ul>
                 </div>
             </div>
@@ -136,9 +136,9 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos itaque atque laboriosam recusandae hic culpa ea sequi maiores beatae quasi.</p>
                     </div>
                     <ul>
-                        <li><img src="https://www.theodinproject.com/assets/icons/odin-icon-22b41941.svg" alt="norse god odin's face"></li>
-                        <li><img src="https://www.theodinproject.com/assets/icons/odin-icon-22b41941.svg" alt="norse god odin's face"></li>
-                        <li><img src="https://www.theodinproject.com/assets/icons/odin-icon-22b41941.svg" alt="norse god odin's face"></li>
+                        <li><img src="img/star-svgrepo-com.svg" alt="icon" width="50px"></li>
+                        <li><img src="img/eye-plus-svgrepo-com.svg" alt="icon" width="50px"></li>
+                        <li><img src="img/git-branch-svgrepo-com.svg" alt="icon" width="50px"></li>
                     </ul>
                 </div>
             </div>
@@ -150,9 +150,9 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos itaque atque laboriosam recusandae hic culpa ea sequi maiores beatae quasi.</p>
                     </div>
                     <ul>
-                        <li><img src="https://www.theodinproject.com/assets/icons/odin-icon-22b41941.svg" alt="norse god odin's face"></li>
-                        <li><img src="https://www.theodinproject.com/assets/icons/odin-icon-22b41941.svg" alt="norse god odin's face"></li>
-                        <li><img src="https://www.theodinproject.com/assets/icons/odin-icon-22b41941.svg" alt="norse god odin's face"></li>
+                        <li><img src="img/star-svgrepo-com.svg" alt="icon" width="50px"></li>
+                        <li><img src="img/eye-plus-svgrepo-com.svg" alt="icon" width="50px"></li>
+                        <li><img src="img/git-branch-svgrepo-com.svg" alt="icon" width="50px"></li>
                     </ul>
                 </div>
             </div>
@@ -180,28 +180,28 @@
             <h5>Trending</h5>
             <div class="trends-container">
                 <div class="trend">
-                    <img src="https://www.theodinproject.com/assets/icons/odin-icon-22b41941.svg" alt="norse god odin's face">
+                    <img src="img/horse-origami-paper-svgrepo-com.svg" alt="icon" width="50px">
                     <div class="trend-content">
                         <p>@tegan</p>
                         <p>World Peace Builder</p>
                     </div>
                 </div>
                 <div class="trend">
-                    <img src="https://www.theodinproject.com/assets/icons/odin-icon-22b41941.svg" alt="norse god odin's face">
+                    <img src="img/animal-cat-cats-svgrepo-com.svg" alt="icon" width="50px">
                     <div class="trend-content">
                         <p>@morgan</p>
                         <p>Super Cool Project</p>
                     </div>
                 </div>
                 <div class="trend">
-                    <img src="https://www.theodinproject.com/assets/icons/odin-icon-22b41941.svg" alt="norse god odin's face">
+                    <img src="img/spider-svgrepo-com.svg" alt="icon" width="50px">
                     <div class="trend-content">
                         <p>@kendall</p>
                         <p>Life Changing App</p>
                     </div>
                 </div>
                 <div class="trend">
-                    <img src="https://www.theodinproject.com/assets/icons/odin-icon-22b41941.svg" alt="norse god odin's face">
+                    <img src="img/penguin-svgrepo-com.svg" alt="icon" width="50px">
                     <div class="trend-content">
                         <p>@alex</p>
                         <p>No Traffic Maker</p>
