Add coloring to trends text

--- a/index.html
+++ b/index.html
@@ -183,28 +183,28 @@
                     <img src="img/horse-origami-paper-svgrepo-com.svg" alt="icon" width="50px">
                     <div class="trend-content">
                         <p>@tegan</p>
-                        <p>World Peace Builder</p>
+                        <p class="trendtext">World Peace Builder</p>
                     </div>
                 </div>
                 <div class="trend">
                     <img src="img/animal-cat-cats-svgrepo-com.svg" alt="icon" width="50px">
                     <div class="trend-content">
                         <p>@morgan</p>
-                        <p>Super Cool Project</p>
+                        <p class="trendtext">Super Cool Project</p>
                     </div>
                 </div>
                 <div class="trend">
                     <img src="img/spider-svgrepo-com.svg" alt="icon" width="50px">
                     <div class="trend-content">
                         <p>@kendall</p>
-                        <p>Life Changing App</p>
+                        <p class="trendtext">Life Changing App</p>
                     </div>
                 </div>
                 <div class="trend">
                     <img src="img/penguin-svgrepo-com.svg" alt="icon" width="50px">
                     <div class="trend-content">
                         <p>@alex</p>
-                        <p>No Traffic Maker</p>
+                        <p class="trendtext">No Traffic Maker</p>
                     </div>
                 </div>
             </div>
